@@ -121,7 +121,7 @@ PingStrategy.prototype._pingServer = function(callback) {
       // Create a new server object, avoid using internal connections as they might
       // be in an illegal state
       new function(serverInstance) {
-        var server = new Server(serverInstance.host, serverInstance.port, {poolSize:1, timeout:500});
+        var server = new Server(serverInstance.host, serverInstance.port, {poolSize:1, timeout:500, auto_reconnect:false});
         var db = new self.Db(self.replicaset.db.databaseName, server);
         // Add error listener
         db.on("error", function(err) {
