@@ -2,6 +2,7 @@ var QueryCommand = require('./commands/query_command').QueryCommand,
   GetMoreCommand = require('./commands/get_more_command').GetMoreCommand,
   KillCursorCommand = require('./commands/kill_cursor_command').KillCursorCommand,
   Long = require('bson').Long,
+  ReadPreference = require('./connection/read_preference').ReadPreference,
   CursorStream = require('./cursorstream'),
   utils = require('./utils');
 
@@ -59,7 +60,7 @@ function Cursor(db, collection, selector, fields, skip, limit
   this.batchSizeValue = batchSize == null ? 0 : batchSize;
   this.slaveOk = slaveOk == null ? collection.slaveOk : slaveOk;
   this.raw = raw == null ? false : raw;
-  this.read = read == null ? true : read;
+  this.read = read == null ? ReadPreference.PRIMARY : read;
   this.returnKey = returnKey;
   this.maxScan = maxScan;
   this.min = min;
