@@ -858,8 +858,10 @@ Db.prototype.command = function(selector, options, callback) {
   var cursor = new Cursor(this
     , new Collection(this, DbCommand.SYSTEM_COMMAND_COLLECTION), selector, {}, 0, -1, null, null, null, null, QueryCommand.OPTS_NO_CURSOR_TIMEOUT
     , null, null, null, null, null, null, null, null, null, null, null, null, null, options['dbName']);
+
   // Set read preference if we set one
   var readPreference = options['readPreference'] ? options['readPreference'] : false;
+
   // Ensure only commands who support read Prefrences are exeuted otherwise override and use Primary
   if(readPreference != false) {
     if(selector['group'] || selector['aggregate'] || selector['collStats'] || selector['dbStats']
@@ -871,6 +873,7 @@ Db.prototype.command = function(selector, options, callback) {
       cursor.setReadPreference(ReadPreference.PRIMARY);
     }
   }
+
   // Return the next object
   cursor.nextObject(callback);
 };
