@@ -19,14 +19,14 @@ var RS = RS == null ? null : RS;
 
 var ensureConnection = function(test, numberOfTries, callback) {
   // Replica configuration
-  var replSet = new ReplSetServers( [ 
+  var replSet = new ReplSetServers( [
       new Server( RS.host, RS.ports[1], { auto_reconnect: true } ),
       new Server( RS.host, RS.ports[0], { auto_reconnect: true } ),
       new Server( RS.host, RS.ports[2], { auto_reconnect: true } )
-    ], 
+    ],
     {rs_name:RS.name}
   );
-  
+
   if(numberOfTries <= 0) return callback(new Error("could not connect correctly"), null);
 
   var db = new Db('integration_test_', replSet);
@@ -37,9 +37,9 @@ var ensureConnection = function(test, numberOfTries, callback) {
     if(err != null && err.stack != null) console.log(err.stack)
     db.close();
   })
-  
+
   // Open the db
-  db.open(function(err, p_db) {    
+  db.open(function(err, p_db) {
     db.close();
 
     if(err != null) {
@@ -50,24 +50,24 @@ var ensureConnection = function(test, numberOfTries, callback) {
       }, 3000);
     } else {
       return callback(null);
-    }    
-  })            
+    }
+  })
 }
 
-var waitForReplicaset = function(callback) {    
+var waitForReplicaset = function(callback) {
   // Replica configuration
-  var replSet = new ReplSetServers([ 
+  var replSet = new ReplSetServers([
       new Server( RS.host, RS.ports[1], { auto_reconnect: true } ),
       new Server( RS.host, RS.ports[0], { auto_reconnect: true } ),
       new Server( RS.host, RS.ports[2], { auto_reconnect: true } )
     ], {});
-    
-  var db = new Db('integration_test_', replSet);    
+
+  var db = new Db('integration_test_', replSet);
   db.on("fullsetup", function() {
     db.close();
     callback();
   });
-  
+
   db.open(function(err, p_db) {
     db = p_db;
   });
@@ -76,19 +76,19 @@ var waitForReplicaset = function(callback) {
 /**
  * Retrieve the server information for the current
  * instance of the db client
- * 
+ *
  * @ignore
  */
 exports.setUp = function(callback) {
   // Create instance of replicaset manager but only for the first call
   if(!serversUp && !noReplicasetStart) {
     serversUp = true;
-    RS = new ReplicaSetManager({retries:120, passive_count:0, secondary_count:2, tags:[{"dc1":"ny"}, {"dc1":"ny"}, {"dc2":"sf"}]});    
-    RS.startSet(true, function(err, result) {      
+    RS = new ReplicaSetManager({retries:120, passive_count:0, secondary_count:2, tags:[{"dc1":"ny"}, {"dc1":"ny"}, {"dc2":"sf"}]});
+    RS.startSet(true, function(err, result) {
       if(err != null) throw err;
-      waitForReplicaset(callback);      
-    });      
-  } else {    
+      waitForReplicaset(callback);
+    });
+  } else {
     RS.restartKilledNodes(function(err, result) {
       if(err != null) throw err;
       waitForReplicaset(callback);
@@ -99,7 +99,7 @@ exports.setUp = function(callback) {
 /**
  * Retrieve the server information for the current
  * instance of the db client
- * 
+ *
  * @ignore
  */
 exports.tearDown = function(callback) {
@@ -107,23 +107,23 @@ exports.tearDown = function(callback) {
   if(numberOfTestsRun == 0) {
     // Finished kill all instances
     RS.killAll(function() {
-      callback();              
+      callback();
     })
   } else {
-    callback();            
-  }  
+    callback();
+  }
 }
 
 exports['Should Correctly Collect ping information from servers'] = function(test) {
   // Replica configuration
-  var replSet = new ReplSetServers([ 
+  var replSet = new ReplSetServers([
       new Server( RS.host, RS.ports[1], { auto_reconnect: true } ),
       new Server( RS.host, RS.ports[0], { auto_reconnect: true } ),
       new Server( RS.host, RS.ports[2], { auto_reconnect: true } )
-    ], 
+    ],
     {}
   );
-  
+
   // Set read preference
   replSet.setReadPreference({'dc3':'pa', 'dc2':'sf', 'dc1':'ny'});
   // Open the database
@@ -139,27 +139,27 @@ exports['Should Correctly Collect ping information from servers'] = function(tes
         test.ok(server.queryStats.variance >= 0);
         test.ok(server.queryStats.standardDeviation >= 0);
       }
-      
-      db.close();        
+
+      db.close();
       test.done();
     }, 5000)
   });
 
   db.open(function(err, p_db) {
     db = p_db;
-  })    
+  })
 }
 
 exports['Should correctly pick a ping strategy for secondary'] = function(test) {
   // Replica configuration
-  var replSet = new ReplSetServers([ 
+  var replSet = new ReplSetServers([
       new Server( RS.host, RS.ports[1], { auto_reconnect: true } ),
       new Server( RS.host, RS.ports[0], { auto_reconnect: true } ),
       new Server( RS.host, RS.ports[2], { auto_reconnect: true } )
-    ], 
+    ],
     {}
   );
-  
+
   // Set read preference
   replSet.setReadPreference(Server.READ_SECONDARY);
   // Open the database
@@ -167,16 +167,16 @@ exports['Should correctly pick a ping strategy for secondary'] = function(test) 
   // Trigger test once whole set is up
   db.on("fullsetup", function() {
     db.createCollection('testsets3', function(err, collection) {
-      if(err != null) debug("shouldCorrectlyWaitForReplicationToServersOnInserts :: " + inspect(err));  
-      
+      if(err != null) debug("shouldCorrectlyWaitForReplicationToServersOnInserts :: " + inspect(err));
+
       // Insert a bunch of documents
-      collection.insert([{a:20}, {b:30}, {c:40}, {d:50}], {safe: {w:'majority'}}, function(err, r) {            
-        
+      collection.insert([{a:20}, {b:30}, {c:40}, {d:50}], {safe: {w:'majority'}}, function(err, r) {
+
         // Select all documents
         collection.find().toArray(function(err, items) {
           test.equal(null, err);
           test.equal(4, items.length);
-          db.close();        
+          db.close();
           test.done();
         });
       });
@@ -185,22 +185,22 @@ exports['Should correctly pick a ping strategy for secondary'] = function(test) 
 
   db.open(function(err, p_db) {
     db = p_db;
-  })    
+  })
 }
 
 exports['Should correctly pick a statistics strategy for secondary'] = function(test) {
   // Replica configuration
-  var replSet = new ReplSetServers([ 
+  var replSet = new ReplSetServers([
       new Server( RS.host, RS.ports[1], { auto_reconnect: true } ),
       new Server( RS.host, RS.ports[0], { auto_reconnect: true } ),
       new Server( RS.host, RS.ports[2], { auto_reconnect: true } )
-    ], 
+    ],
     {strategy:'statistical'}
   );
-  
+
   // Ensure we have the right strategy
   test.ok(replSet.strategyInstance instanceof StatisticsStrategy);
-  
+
   // Set read preference
   replSet.setReadPreference(Server.READ_SECONDARY);
   // Open the database
@@ -208,29 +208,28 @@ exports['Should correctly pick a statistics strategy for secondary'] = function(
   // Trigger test once whole set is up
   db.on("fullsetup", function() {
     db.createCollection('testsets2', function(err, collection) {
-      if(err != null) debug("shouldCorrectlyWaitForReplicationToServersOnInserts :: " + inspect(err));  
-      
+      if(err != null) debug("shouldCorrectlyWaitForReplicationToServersOnInserts :: " + inspect(err));
+
       // Insert a bunch of documents
-      collection.insert([{a:20}, {b:30}, {c:40}, {d:50}], {safe: {w:'majority'}}, function(err, r) {            
-        
+      collection.insert([{a:20}, {b:30}, {c:40}, {d:50}], {safe: {w:'majority'}}, function(err, r) {
         // Select all documents
         collection.find().toArray(function(err, items) {
           collection.find().toArray(function(err, items) {
             collection.find().toArray(function(err, items) {
               test.equal(null, err);
               test.equal(4, items.length);
-              
+
               // Total number of entries done
-              var totalNumberOfStrategyEntries = 0;          
+              var totalNumberOfStrategyEntries = 0;
               // Check that we have correct strategy objects
               var keys = Object.keys(replSet._state.secondaries);
               for(var i = 0; i < keys.length; i++) {
                 var server = replSet._state.secondaries[keys[i]];
                 totalNumberOfStrategyEntries += server.queryStats.numDataValues;
               }
-          
-              db.close();        
-              test.equal(6, totalNumberOfStrategyEntries);
+
+              db.close();
+              test.equal(5, totalNumberOfStrategyEntries);
               test.done();
             });
           });
@@ -238,16 +237,16 @@ exports['Should correctly pick a statistics strategy for secondary'] = function(
       });
     });
   });
-  
+
   db.open(function(err, p_db) {
     db = p_db;
-  })    
+  })
 },
 
 /**
  * Retrieve the server information for the current
  * instance of the db client
- * 
+ *
  * @ignore
  */
 exports.noGlobalsLeaked = function(test) {
@@ -259,7 +258,7 @@ exports.noGlobalsLeaked = function(test) {
 /**
  * Retrieve the server information for the current
  * instance of the db client
- * 
+ *
  * @ignore
  */
 var numberOfTestsRun = Object.keys(this).length - 2;
